--- a/code/main_analysis.html
+++ b/code/main_analysis.html
@@ -682,20 +682,20 @@ plot</code></pre>
     tbl_regression(exp = TRUE) </code></pre>
 <pre><code>## Warning in coxph.fit(X, Y, istrat, offset, init, control, weights = weights, :
 ## Loglik converged before variable 1,2,3,4,5,6,7,8 ; coefficient may be infinite.</code></pre>
-<div id="txlugnumxn" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#txlugnumxn table {
+<div id="tvsngxhtsr" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#tvsngxhtsr table {
 font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
 }
-#txlugnumxn thead, #txlugnumxn tbody, #txlugnumxn tfoot, #txlugnumxn tr, #txlugnumxn td, #txlugnumxn th {
+#tvsngxhtsr thead, #tvsngxhtsr tbody, #tvsngxhtsr tfoot, #tvsngxhtsr tr, #tvsngxhtsr td, #tvsngxhtsr th {
 border-style: none;
 }
-#txlugnumxn p {
+#tvsngxhtsr p {
 margin: 0;
 padding: 0;
 }
-#txlugnumxn .gt_table {
+#tvsngxhtsr .gt_table {
 display: table;
 border-collapse: collapse;
 line-height: normal;
@@ -720,11 +720,11 @@ border-left-style: none;
 border-left-width: 2px;
 border-left-color: #D3D3D3;
 }
-#txlugnumxn .gt_caption {
+#tvsngxhtsr .gt_caption {
 padding-top: 4px;
 padding-bottom: 4px;
 }
-#txlugnumxn .gt_title {
+#tvsngxhtsr .gt_title {
 color: #333333;
 font-size: 125%;
 font-weight: initial;
@@ -735,7 +735,7 @@ padding-right: 5px;
 border-bottom-color: #FFFFFF;
 border-bottom-width: 0;
 }
-#txlugnumxn .gt_subtitle {
+#tvsngxhtsr .gt_subtitle {
 color: #333333;
 font-size: 85%;
 font-weight: initial;
@@ -746,7 +746,7 @@ padding-right: 5px;
 border-top-color: #FFFFFF;
 border-top-width: 0;
 }
-#txlugnumxn .gt_heading {
+#tvsngxhtsr .gt_heading {
 background-color: #FFFFFF;
 text-align: center;
 border-bottom-color: #FFFFFF;
@@ -757,12 +757,12 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#txlugnumxn .gt_bottom_border {
+#tvsngxhtsr .gt_bottom_border {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#txlugnumxn .gt_col_headings {
+#tvsngxhtsr .gt_col_headings {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -776,7 +776,7 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#txlugnumxn .gt_col_heading {
+#tvsngxhtsr .gt_col_heading {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -795,7 +795,7 @@ padding-left: 5px;
 padding-right: 5px;
 overflow-x: hidden;
 }
-#txlugnumxn .gt_column_spanner_outer {
+#tvsngxhtsr .gt_column_spanner_outer {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -806,13 +806,13 @@ padding-bottom: 0;
 padding-left: 4px;
 padding-right: 4px;
 }
-#txlugnumxn .gt_column_spanner_outer:first-child {
+#tvsngxhtsr .gt_column_spanner_outer:first-child {
 padding-left: 0;
 }
-#txlugnumxn .gt_column_spanner_outer:last-child {
+#tvsngxhtsr .gt_column_spanner_outer:last-child {
 padding-right: 0;
 }
-#txlugnumxn .gt_column_spanner {
+#tvsngxhtsr .gt_column_spanner {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
@@ -823,10 +823,10 @@ overflow-x: hidden;
 display: inline-block;
 width: 100%;
 }
-#txlugnumxn .gt_spanner_row {
+#tvsngxhtsr .gt_spanner_row {
 border-bottom-style: hidden;
 }
-#txlugnumxn .gt_group_heading {
+#tvsngxhtsr .gt_group_heading {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -851,7 +851,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 text-align: left;
 }
-#txlugnumxn .gt_empty_group_heading {
+#tvsngxhtsr .gt_empty_group_heading {
 padding: 0.5px;
 color: #333333;
 background-color: #FFFFFF;
@@ -865,13 +865,13 @@ border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 vertical-align: middle;
 }
-#txlugnumxn .gt_from_md > :first-child {
+#tvsngxhtsr .gt_from_md > :first-child {
 margin-top: 0;
 }
-#txlugnumxn .gt_from_md > :last-child {
+#tvsngxhtsr .gt_from_md > :last-child {
 margin-bottom: 0;
 }
-#txlugnumxn .gt_row {
+#tvsngxhtsr .gt_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -889,7 +889,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 overflow-x: hidden;
 }
-#txlugnumxn .gt_stub {
+#tvsngxhtsr .gt_stub {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -901,7 +901,7 @@ border-right-color: #D3D3D3;
 padding-left: 5px;
 padding-right: 5px;
 }
-#txlugnumxn .gt_stub_row_group {
+#tvsngxhtsr .gt_stub_row_group {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -914,13 +914,13 @@ padding-left: 5px;
 padding-right: 5px;
 vertical-align: top;
 }
-#txlugnumxn .gt_row_group_first td {
+#tvsngxhtsr .gt_row_group_first td {
 border-top-width: 2px;
 }
-#txlugnumxn .gt_row_group_first th {
+#tvsngxhtsr .gt_row_group_first th {
 border-top-width: 2px;
 }
-#txlugnumxn .gt_summary_row {
+#tvsngxhtsr .gt_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -929,14 +929,14 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#txlugnumxn .gt_first_summary_row {
+#tvsngxhtsr .gt_first_summary_row {
 border-top-style: solid;
 border-top-color: #D3D3D3;
 }
-#txlugnumxn .gt_first_summary_row.thick {
+#tvsngxhtsr .gt_first_summary_row.thick {
 border-top-width: 2px;
 }
-#txlugnumxn .gt_last_summary_row {
+#tvsngxhtsr .gt_last_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -945,7 +945,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#txlugnumxn .gt_grand_summary_row {
+#tvsngxhtsr .gt_grand_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -954,7 +954,7 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#txlugnumxn .gt_first_grand_summary_row {
+#tvsngxhtsr .gt_first_grand_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -963,7 +963,7 @@ border-top-style: double;
 border-top-width: 6px;
 border-top-color: #D3D3D3;
 }
-#txlugnumxn .gt_last_grand_summary_row_top {
+#tvsngxhtsr .gt_last_grand_summary_row_top {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -972,10 +972,10 @@ border-bottom-style: double;
 border-bottom-width: 6px;
 border-bottom-color: #D3D3D3;
 }
-#txlugnumxn .gt_striped {
+#tvsngxhtsr .gt_striped {
 background-color: rgba(128, 128, 128, 0.05);
 }
-#txlugnumxn .gt_table_body {
+#tvsngxhtsr .gt_table_body {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -983,7 +983,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#txlugnumxn .gt_footnotes {
+#tvsngxhtsr .gt_footnotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -996,7 +996,7 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#txlugnumxn .gt_footnote {
+#tvsngxhtsr .gt_footnote {
 margin: 0px;
 font-size: 90%;
 padding-top: 4px;
@@ -1004,7 +1004,7 @@ padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#txlugnumxn .gt_sourcenotes {
+#tvsngxhtsr .gt_sourcenotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -1017,57 +1017,57 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#txlugnumxn .gt_sourcenote {
+#tvsngxhtsr .gt_sourcenote {
 font-size: 90%;
 padding-top: 4px;
 padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#txlugnumxn .gt_left {
+#tvsngxhtsr .gt_left {
 text-align: left;
 }
-#txlugnumxn .gt_center {
+#tvsngxhtsr .gt_center {
 text-align: center;
 }
-#txlugnumxn .gt_right {
+#tvsngxhtsr .gt_right {
 text-align: right;
 font-variant-numeric: tabular-nums;
 }
-#txlugnumxn .gt_font_normal {
+#tvsngxhtsr .gt_font_normal {
 font-weight: normal;
 }
-#txlugnumxn .gt_font_bold {
+#tvsngxhtsr .gt_font_bold {
 font-weight: bold;
 }
-#txlugnumxn .gt_font_italic {
+#tvsngxhtsr .gt_font_italic {
 font-style: italic;
 }
-#txlugnumxn .gt_super {
+#tvsngxhtsr .gt_super {
 font-size: 65%;
 }
-#txlugnumxn .gt_footnote_marks {
+#tvsngxhtsr .gt_footnote_marks {
 font-size: 75%;
 vertical-align: 0.4em;
 position: initial;
 }
-#txlugnumxn .gt_asterisk {
+#tvsngxhtsr .gt_asterisk {
 font-size: 100%;
 vertical-align: 0;
 }
-#txlugnumxn .gt_indent_1 {
+#tvsngxhtsr .gt_indent_1 {
 text-indent: 5px;
 }
-#txlugnumxn .gt_indent_2 {
+#tvsngxhtsr .gt_indent_2 {
 text-indent: 10px;
 }
-#txlugnumxn .gt_indent_3 {
+#tvsngxhtsr .gt_indent_3 {
 text-indent: 15px;
 }
-#txlugnumxn .gt_indent_4 {
+#tvsngxhtsr .gt_indent_4 {
 text-indent: 20px;
 }
-#txlugnumxn .gt_indent_5 {
+#tvsngxhtsr .gt_indent_5 {
 text-indent: 25px;
 }
 </style>
